# bevy-minesweeper

./: Cargo.toml
minesweeper-plugin/: Cargo.toml
minesweeper-plugin/src/: config.rs  events.rs  input.rs  lib.rs  time.rs
minesweeper-plugin/src/components/: coordinates.rs  mod.rs
minesweeper-plugin/src/resources/: grid.rs  mod.rs
minesweeper-plugin/src/ui/: game_over.rs  main_game_ui.rs  mod.rs  victory.rs
minesweeper-plugin/src/ui/settings/: difficulty.rs  mod.rs  themes.rs
src/: main.rs
